--- a/style.css
+++ b/style.css
@@ -1,19 +1,27 @@
-#mydiv {
-  position: absolute;
-  z-index: 9;
-  background-color: #f1f1f1;
-  border: 1px solid #d3d3d3;
-  text-align: center;
-}
-
-#mydivheader {
-  padding: 10px;
-  cursor: move;
-  z-index: 10;
-  background-color: #2196F3;
-  color: #fff;
-}
-
 button{
-  corner-shape: squircle;
+  font-family: monospace;
+  border-radius: 5px;
+  transition: 0.5s ease;
+  border-style: solid;
+  size: 20px;
+}
+button:hover{
+  background-color: rgb(41, 41, 41);
+  color: aqua;
+  border-style: dashed;
+  border-color: aqua;
+  box-shadow: 3px 3px gray;
+}
+h1{
+  text-align: center;
+  font-family: monospace;
+}
+p{
+  text-align: center;
+  font-family: monospace;
+}
+.button{
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
